--- a/package.json
+++ b/package.json
@@ -16,27 +16,37 @@
     "@emotion/styled": "^11.11.0",
     "@phosphor-icons/react": "^2.0.10",
     "@tinymce/tinymce-react": "^4.3.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@types/uuid": "^9.0.2",
     "antd": "^5.8.2",
+    "bcrypt": "^5.1.0",
     "boxicons": "^2.1.4",
+    "cookie": "^0.5.0",
     "framer-motion": "^10.15.0",
     "megadraft": "^0.8.0",
+    "mongodb": "^5.7.0",
     "next": "13.4.6",
     "next-auth": "^4.22.3",
+    "playwright": "^1.36.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-slick": "^0.29.0",
     "sass": "^1.64.2",
     "slick-carousel": "^1.8.1",
-    "typescript": "5.1.3"
+    "tinymce": "^6.6.1",
+    "typescript": "5.1.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "license": "MIT"
 }
